<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">


    <in.koreatech.koin.core.appbar.AppBarBase
        android:id="@+id/koin_base_app_bar_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftButtonBackground="@drawable/ic_back_arrow"
        app:rightButtonBackground="@drawable/ic_create" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/article_comment_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/article_comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:fontName="Regular"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="글씨 길어질 때는 이렇게 연출 되어야 합니다!(1)" />


            <TextView
                android:id="@+id/article_comment_view_count_korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="@string/board_view_count"
                android:textColor="@color/gray9"
                android:textSize="13sp"
                app:fontName="Regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_title" />

            <TextView
                android:id="@+id/article_comment_view_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textColor="@color/gray9"
                android:textSize="13sp"
                app:fontName="Regular"
                app:layout_constraintStart_toEndOf="@id/article_comment_view_count_korean"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_title"
                tools:text="1212" />

            <TextView
                android:id="@+id/article_comment_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text=" · "
                android:textColor="@color/gray9"
                android:textSize="13sp"
                app:fontName="Regular"
                app:layout_constraintStart_toEndOf="@id/article_comment_view_count"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_title" />

            <TextView
                android:id="@+id/article_comment_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textColor="@color/gray9"
                android:textSize="13sp"
                app:fontName="Regular"
                app:layout_constraintStart_toEndOf="@id/article_comment_dot"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_title"
                tools:text="아이디가머냐고" />

            <TextView
                android:id="@+id/article_comment_create_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:textColor="@color/gray9"
                android:textSize="13sp"
                app:fontName="Custom4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_title"
                tools:text="2019.03.02" />


            <LinearLayout
                android:id="@+id/article_comment_title_content_border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="14.5dp"
                android:background="@color/divider"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_writer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/article_comment_content_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="22.5dp"
                android:layout_marginEnd="16dp"
                android:lineSpacingExtra="10sp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_title_content_border" />

            <LinearLayout
                android:id="@+id/article_comment_comment_edit_border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="22.5dp"
                android:layout_marginBottom="15dp"
                android:background="@color/divider"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/linearLayout"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_content_recyclerview"
                app:layout_constraintVertical_bias="0" />

            <LinearLayout
                android:id="@+id/article_comment_password_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="28.7dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="17.5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_gray9_rectangle"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/article_comment_comment_edit_border"
                app:layout_goneMarginTop="17.5dp">

                <EditText
                    android:id="@+id/article_comment_password_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="5.7dp"
                    android:background="@null"
                    android:hint="비밀번호를 입력해주세요"
                    android:inputType="textPassword"
                    android:letterSpacing="-0.05"
                    android:lineSpacingExtra="10sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:textSize="14sp"
                    app:fontName="Regular" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="113dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15.5dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_gray9_rectangle"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/article_comment_password_linearlayout">

                <LinearLayout
                    android:id="@+id/article_comment_nickname_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="21dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="12dp">

                    <EditText
                        android:id="@+id/article_comment_nickname_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="닉네임을 입력해주세요"
                        android:letterSpacing="-0.05"
                        android:lineSpacingExtra="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        app:fontName="Regular" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/article_comment_content_linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="12dp">

                    <EditText
                        android:id="@+id/article_comment_content_edittext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="댓글을 작성해주세요"
                        android:letterSpacing="-0.05"
                        android:lineSpacingExtra="10sp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray3"
                        android:textSize="14sp"
                        app:fontName="Regular" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/article_comment_cancel_register_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="28.7dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24.3dp"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/article_comment_cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="취소"
                    app:fontName="Regular" />

                <Button
                    android:id="@+id/article_comment_register_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="등록"
                    app:fontName="Regular" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/aritcle_comment_anonymous_cancel_delete_edit_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="28.7dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24.3dp"
                android:visibility="gone"
                android:weightSum="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Button
                    android:id="@+id/article_comment_anonymous_cancel_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4.3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="취소"
                    app:fontName="Regular" />

                <Button
                    android:id="@+id/article_comment_anonymous_delete_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4.3dp"
                    android:layout_marginEnd="4.3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="삭제"
                    android:textColor="@color/red"
                    app:fontName="Regular" />

                <Button
                    android:id="@+id/article_comment_anonymous_register_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4.3dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gray9_rectangle"
                    android:text="등록"
                    app:fontName="Regular" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>