...
    <string name="navigation_item_store">상점</string>
    <string name="navigation_item_dining">식단</string>
    <string name="navigation_item_land">복덕방</string>
    <!--<string name="navigation_item_faq">FAQ</string>-->

    <!--커뮤니티-->
    <string name="navigation_item_free_board">자유게시판</string>
    <string name="navigation_item_anonymous_board">익명게시판</string>
    <string name="navigation_item_recruit_board">취업게시판</string>

    <!--부가서비스-->
    <string name="navigation_item_callvan_sharing">콜밴쉐어링</string>
    <string name="navigation_item_real_estate">복덕방</string>
...
    <string name="board_comment_count">댓글수</string>
    <string name="board_author">작성자</string>
    <string name="board_create">작성</string>
    <string name="board_edit">수정</string>

    <!-- Comment -->
    <string name="comment_edit">수정</string>
    <string name="comment_remove">삭제</string>
    <string name="comment_reply">댓글</string>

    <!--Bus-->
    <string name="bus_search_button">조회</string>
    <string name="bus_spinner_select_error">출발지와 도착지는 달라야합니다.</string>
    <string name="daesung_depature_place_university_to_yawoori">안동출발버스</string>
...
