...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="56dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/freeboard_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background"
            android:clipToPadding="false" />
    </in.koreatech.koin.core.swiperefreshbottom.SwipeRefreshLayoutBottom>

...
