...
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/article_title"
                tools:text="2019.03.02" />

            <Button
                android:id="@+id/article_comment_write_button"
                android:layout_width="69.2dp"
                android:layout_height="28.7dp"
                android:layout_marginStart="9.8dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="13.8dp"
                android:background="@drawable/button_rect_normal"
...
